--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@solidjs/meta": "^0.29.1",
     "@solidjs/router": "^0.8.3",
+    "prettier": "^3.1.0",
     "solid-js": "^1.8.5",
     "solid-start": "^0.3.10"
   },
